# ravenswood-bluff

./: .gitignore  CHANGELOG.md  README.md  VERSION_NOTES.md  architecture.md  debug_imports.py  pyproject.toml  read_log.py  simulate_game.py  test_llm.py  test_out_ph1.txt  test_out_ph3.txt  trace.txt
data/: _json_fallback_game_record.records.json  _probe_games.db-journal.corrupt_20260420_170157  _probe_games.db-journal.corrupt_20260420_170706  _probe_games.records.json  _probe_sqlite3.db  _probe_sqlite3.db-journal  games.db
docs/: GEMINI_HANDOFF_REVIEW_2026-04-18.md  GEMINI_REMEDIATION_BACKLOG.md  HANDOVER_ALPHA_0.2.md  alpha-0.1-release-notes.md  alpha-0.2-release-summary.md  alpha-0.3-plan.md  alpha-0.3-release-summary.md  frontend_acceptance.md  remediation_backlog.md  rule_matrix.md  validation_report.md
public/: index.html  storyteller.html
scratch/: check_syntax.py
scripts/: a3_data_acceptance.py  a3_memory_acceptance.py  ai_eval_acceptance.py  ai_evaluation.py  alpha3_acceptance.py  export_ai_traces.py  export_all_assets.py  export_game_assets.py  frontend_acceptance.py  gameover_acceptance.py  generate_storyteller_balance_samples.py  ghost_vote_test.py  long_game_ai_acceptance.py  long_loop_memory_acceptance.py  night_info_acceptance.py  nomination_acceptance.py  persona_divergence_test.py  player_knowledge_acceptance.py  role_acceptance.py  storyteller_acceptance.py  storyteller_balance_acceptance.py  storyteller_balance_sample_export.py  wave1_acceptance.py  wave2_acceptance.py  wave3_acceptance.py  wave4_acceptance.py
src/: __init__.py
(+122 files in other folders)
